# ucgrb

./: .gitignore  LICENSE  README.md  README_EN.md  env.yml  pyproject.toml  setup.cfg  setup.py
data_set/data-example/: README.md  README_EN.md  area.csv  descent.csv  others.csv  planned_outage.csv
data_set/data-mini/: ESS.csv  README.md  README_EN.md  area.csv  others.csv
docs/: 01_feature.md  02_requirement.md  08_how_to_modify_csvfile.md
docs/03_01_run_with_licence/: 01_run.md  02_example.md
docs/03_02_run_without_licence/: 01_run.md  02_mps.md
docs/04_formulation/: 01_objective_function.md  03_set_and_index.md
docs/05_csvfile/: 01_about.md  02_generation.md  03_area.md  04_tie.md  05_timeline.md
docs/06_config/: 01_how_to_write.md  02_input_data_and_solver.md  03_unit_commitment.md  04_rolling_optimization_list.md  05_result_output.md
docs/07_for_developer/: 01_config_setting.md  02_formatter.md
docs_en/: 01_feature.md  02_requirement.md
docs_en/03_01_run_with_licence/: 01_run.md  02_example.md
docs_en/03_02_run_without_licence/: 01_run.md  02_mps.md
docs_en/04_formulation/: 01_objective_function.md  03_set_and_index.md
ucgrb/: __init__.py  _make_dir.py  _version.py  stopwatch.py  ucgrb.py
ucgrb/make_grb_model/: __init__.py  _set_object_function.py  _set_variables.py  make_grb_model.py
ucgrb/output_result/: __init__.py  output_result.py
ucgrb/uc_data/: __init__.py  _add_scheduling_setting.py  _default_graphical_prop.py  _make_info_file.py  _make_rolling_opt_list.py  _set_constraints.py  _set_dictionaries.py  _set_gurobi_model.py  (+6 more)
(+115 files in other folders)
